--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@ body {
 }
 
 code {
-  font-family: 'Inter', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Urbanist', sans-serif;
+    
 }
